# nix-software-center

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  meson.build  meson_options.txt
build-aux/: dist-vendor.sh
data/: dev.vlinkz.NixSoftwareCenter.desktop.in.in  dev.vlinkz.NixSoftwareCenter.gschema.xml.in  dev.vlinkz.NixSoftwareCenter.metainfo.xml.in.in  dev.vlinkz.NixSoftwareCenter.policy.in.in  meson.build
data/resources/: resources.gresource.xml
modules/: default.nix
nsc-helper/: Cargo.toml
nsc-helper/src/: main.rs  meson.build
po/: POTFILES.in  meson.build
src/: lib.rs  main.rs  meson.build  resources.gresource.xml
src/parse/: cache.rs  config.rs  mod.rs  packages.rs  util.rs
src/ui/: about.rs  categories.rs  categorypage.rs  categorytile.rs  installdialog.rs  installedpage.rs  installworker.rs  mod.rs  pkgpage.rs  pkgtile.rs  preferencespage.rs  rebuild.rs  screenshotfactory.rs  searchpage.rs  unavailabledialog.rs  updatedialog.rs  updatepage.rs  updateworker.rs  welcome.rs  window.rs  windowloading.rs
